@@ -2,6 +2,7 @@ vNEXT (in development)
 
  * Added CtcpReceived and ActionReceived events
  * Added sendCtcp and sendAction message builders
+ * Fix issue with messages being sent out of order, which sometimes caused problems connecting to passworded servers
 
 v0.3.1
 
